Fix navbar to callapse on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Kolker+Brush&family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
     --default-font-color: #f4f7f4;
 }
 
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
@@ -17,17 +17,42 @@ body, html {
 }
 
 .enter-website-image {
-    background-image: url('..assets/img/background-image.gif');
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    overflow: hidden;
+    /* To ensure the pseudo-element doesn't extend beyond this container */
+}
+
+.enter-website-image::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/assets/img/background-image.gif');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    display: flex;
-    justify-content: center; /* This will center the content horizontally. */
-    align-items: center; /* This will center the content vertically. */
-    flex-direction: column; /* This will stack the items on top of each other. */
-    width: 100%;
-    height: 100dvh;/* Full width of the screen */
-    text-align: center; /* Center the text within the div */
+    animation: scaleUp 2s ease-in-out forwards;
+    z-index: -1;
+}
+
+
+@keyframes scaleUp {
+    0% {
+        transform: scale(1.00);
+    }
+
+    100% {
+        transform: scale(1.05);
+    }
 }
 
 .start-content {
@@ -35,30 +60,39 @@ body, html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%; /* Make sure your div has a defined height for this to work */
+    height: 100%;
+    /* Make sure your div has a defined height for this to work */
     /* Your other styles here */
-    padding: 3rem; /* p-3 */
-    background-color: rgba(0, 0, 0, 0.5); /* bg-dark text-white bg-opacity-50 */
-    color: white; /* text-white */
+    padding: 3rem;
+    /* p-3 */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* bg-dark text-white bg-opacity-50 */
+    color: white;
+    /* text-white */
 }
 
 .start-content h1 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
     font-weight: 400;
-    margin-bottom: 2rem;
+    line-height: 1.5;
 }
 
 .start-content h2 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
-    font-weight: 200;
+    font-weight: 300;
+    
+}
+
+.innovation-font {
+    font-family: 'Kolker Brush', cursive;
+    font-size: calc(3rem + 8vw);
+    background: linear-gradient(45deg, red, orange, yellow, green, blue, violet);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
 }
 
 .start-buttons {
-    margin-top: 70px;
-}
-
-.start-buttons .btn-light {
-    margin-right: 30px;
+    margin-top: 40px;
 }
